--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -468,7 +468,7 @@
     <string name="succeed_in_modifying_tag">修改成功</string>
     <string name="succeed_in_deleting_category">删除成功</string>
     <string name="succeed_in_deleting_tag">删除成功</string>
-    <string name="succeed_in_sending_invite">邀请发送成功</string>
+    <string name="succeed_in_sending_invite">发送成功</string>
     <string name="succeed_in_sending_comment">发表成功</string>
     <string name="succeed_in_submitting_report">提交成功</string>
     <string name="succeed_in_alerting">已提醒对方审批报告</string>
