--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -14,11 +14,13 @@
     <string name="chinese">中文</string>
     <string name="english">English</string>
     <string name="rmb">元</string>
-    <string name="rmb_symbol">¥</string>
+    <string name="plus">+</string>
     <string name="percent">%</string>
     <string name="dash">-</string>
+    <string name="rmb_symbol">¥</string>
     <string name="ten_thousand">万</string>
     <string name="one_hundred_million">亿</string>
+    <string name="china_country_code">86</string>
     <string name="year">年</string>
     <string name="month">月</string>
     <string name="second">秒</string>
@@ -33,14 +35,14 @@
     <string name="saturday">周六</string>
     <string name="sunday">周日</string>
 
-    <string name="confirm">Confirm</string>
-    <string name="save">Save</string>
-    <string name="cancel">Cancel</string>
-    <string name="add">Add</string>
-    <string name="establish">Establish</string>
-    <string name="back">Back</string>
-    <string name="complete">Complete</string>
-    <string name="next">Next</string>
+    <string name="confirm">确定</string>
+    <string name="save">保存</string>
+    <string name="cancel">取消</string>
+    <string name="add">添加</string>
+    <string name="establish">新建</string>
+    <string name="back">返回</string>
+    <string name="complete">完成</string>
+    <string name="next">下一步</string>
     <string name="send">发送</string>
     <string name="modify">修改</string>
     <string name="delete">删除</string>
@@ -61,12 +63,12 @@
     <string name="create">创建</string>
     <string name="guide">指导</string>
     <string name="manual">手动</string>
+    <string name="unbind">解绑</string>
     <string name="hot">热门</string>
     <string name="password">密码</string>
-    <string name="wechat">微信</string>
     <string name="wechat_session">微信好友</string>
     <string name="wechat_moments">朋友圈</string>
-    
+
     <string name="sign_up">注册</string>
     <string name="quick_sign_up">快速注册</string>
     <string name="sign_up_by_phone">手机注册</string>
@@ -128,14 +130,14 @@
     <string name="joined_2">已</string>
     <string name="joined_3">加</string>
     <string name="joined_4">入</string>
-    
-    <string name="reimbursement">Reim</string>
-    <string name="report">Report</string>
-    <string name="statistics">Statistics</string>
-    <string name="me">Me</string>
+
+    <string name="reimbursement">消费</string>
+    <string name="report">报告</string>
+    <string name="statistics">统计</string>
+    <string name="me">自己</string>
     <string name="reim_guide">点击＋开始记录你的第一笔消费</string>
     <string name="report_guide">点击这里创建报告，提交你的报销</string>
-    
+
     <string name="sort">排序</string>
     <string name="sort_consumed_date">消费时间</string>
     <string name="sort_amount">金额</string>
@@ -149,8 +151,8 @@
     <string name="filter_added">已加入报告</string>
     <string name="filter_free">未加入报告</string>
     <string name="filter_tag">标签</string>
-    <string name="filter_category">类别</string>    
-    
+    <string name="filter_category">类别</string>
+
     <string name="invoice">发票</string>
     <string name="reim_type">报销类型</string>
     <string name="consumed">报销</string>
@@ -184,7 +186,7 @@
     <string name="report_not_available">未加入报告</string>
     <string name="vendor_not_available">未填写商家</string>
     <string name="pick_image">选择图片</string>
-    
+
     <string name="my_report">我的报告</string>
     <string name="others_report">收到的报告</string>
     <string name="pending">待处理</string>
@@ -229,10 +231,11 @@
     <string name="mark">标记</string>
     <string name="stat_ongoing">报销中</string>
     <string name="stat_new">待提交</string>
+    <string name="new_reim">待报销</string>
     <string name="new_total">待报销总计</string>
     <string name="last_12_months">近12个月</string>
-    <string name="cost_total">费用汇总</string>
     <string name="stat_by_category">类别统计</string>
+    <string name="stat_by_month">月份统计</string>
     <string name="stat_by_tag">标签统计</string>
     <string name="stat_by_member">人员统计</string>
     <string name="choose_month">选择月份</string>
@@ -240,7 +243,7 @@
     <string name="stat_category">类别-</string>
     <string name="stat_tag">标签-</string>
     <string name="stat_user">人员-</string>
-    
+
     <string name="personal_center">个人中心</string>
     <string name="sign_out">退出登录</string>
     <string name="avatar">头像</string>
@@ -257,7 +260,13 @@
     <string name="personal_info">个人信息</string>
     <string name="email">邮箱</string>
     <string name="phone">手机</string>
+    <string name="wechat">微信</string>
+    <string name="bind_email">绑定邮箱</string>
+    <string name="bind_phone">绑定手机</string>
+    <string name="bind_wechat">绑定微信</string>
+    <string name="change_email">更换绑定邮箱</string>
     <string name="change_phone">更换绑定手机</string>
+    <string name="change_wechat">更换绑定微信</string>
     <string name="bank_info">银行账户</string>
     <string name="bank_account">银行账号</string>
     <string name="bank_account_name">户名</string>
@@ -276,6 +285,7 @@
     <string name="manager_not_set">还没有设置上级</string>
     <string name="not_set">未设置</string>
     <string name="not_binding">未绑定</string>
+    <string name="not_active">（未验证）</string>
     <string name="icon">图标</string>
     <string name="sub_category">子类别</string>
     <string name="join_group">加入团队</string>
@@ -297,20 +307,22 @@
     <string name="check_update">检查更新</string>
     <string name="confirm_download">确认下载</string>
     <string name="share">推荐给他人</string>
-    <string name="language">Language Settings</string>
+    <string name="language">语言设置</string>
     <string name="feedback_code">+86</string>
     <string name="version">版本</string>
     <string name="about_footer">Copyright&#169; 2014&#8211;2015 北京如数科技有限公司</string>
     <string name="wechat_share_title">云报销 - 开启全新的报销体验</string>
     <string name="wechat_share_description">点击使用「云报销」，开启全新的报销体验。</string>
     <string name="wechat_invite_description">%1$s邀请你加入「%2$s」，点击就可以开始使用了。</string>
-    
+
     <string name="input_username">请输入手机/邮箱</string>
     <string name="input_password">请输入密码</string>
     <string name="input_new_password">请输入新密码</string>
     <string name="input_confirm_password">请确认密码</string>
+    <string name="input_password_wechat">请输入「云报销」登录密码</string>
     <string name="input_email">请输入邮箱</string>
     <string name="input_phone">请输入手机号</string>
+    <string name="input_country_code">国码</string>
     <string name="input_account_name">请输入户名</string>
     <string name="input_bank_account">请输入银行账号</string>
     <string name="input_code">请输入验证码</string>
@@ -334,9 +346,12 @@
     <string name="input_category_limit">请输入类别限额</string>
     <string name="input_tag_name">请输入标签名称</string>
     <string name="input_user_contact">请输入对方手机号或邮箱</string>
-    
+
     <string name="prompt_loading">正在努力加载中&#8230;</string>
     <string name="prompt_sign_out">确认要切换当前账号</string>
+    <string name="prompt_unbind">确认要解绑？</string>
+    <string name="prompt_last_certification">抱歉，这是你唯一的登录凭证，暂时无法解绑。</string>
+    <string name="prompt_wechat_only">该账号仅绑定了微信，如需更换，请先绑定邮箱并设置密码</string>
     <string name="prompt_save_approve_ahead_item">这是一笔预申请的消费，您是想仅保存此笔消费还是要直接发送给上级审批？</string>
     <string name="prompt_delete_item">是否要删除此笔消费？</string>
     <string name="prompt_delete_report">是否要删除此报告？</string>
@@ -356,9 +371,10 @@
     <string name="prompt_join">管理员通过申请后你就可以使用「云报销」了。在此之前，你也可以记录自己的 消费 ，加入公司后记录可以迁移。</string>
     <string name="prompt_joined">现在你可以使用「云报销」，记录你的 消费 ， 提交报销 申请，或者 审批 他人的报销了。</string>
     <string name="prompt_last_admin">你是公司里最后一个管理员，请先指定公司里另一成员成为管理员</string>
+    <string name="prompt_company_exists">「%1$s」公司已存在，是否建立同名公司？</string>
     <string name="prompt_wechat_share">你可以把「云报销」分享到同事们使用的微信群，让大家迅速加入你创建的公司。</string>
     <string name="prompt_latest_version">当前已是最新版本</string>
-    
+
     <string name="error_wrong_code">验证码错误</string>
     <string name="error_no_code">未获取到任何验证码</string>
     <string name="error_code_empty">验证码不能为空</string>
@@ -419,6 +435,7 @@
     <string name="error_submit_network_unavailable">网络未连接，无法提交</string>
     <string name="error_update_network_unavailable">网络未连接，无法更新信息</string>
     <string name="error_request_network_unavailable">网络未连接，无法发送请求</string>
+    <string name="error_unbind_network_unavailable">网络未连接，无法解绑</string>
     <string name="error_gps_unavailable">定位服务不可用，请打开定位服务或手动输入商家名称</string>
     <string name="error_self_as_manager">不能选择自己作为上级</string>
     <string name="error_trial_invite">试用账号暂时无法邀请别人</string>
@@ -450,10 +467,13 @@
     <string name="succeed_in_sending_message">验证短信已发送</string>
     <string name="succeed_in_changing_password">密码修改成功</string>
     <string name="succeed_in_setting_password">密码设置成功</string>
+    <string name="succeed_in_unbinding_email">解绑邮箱成功</string>
+    <string name="succeed_in_unbinding_phone">解绑手机成功</string>
+    <string name="succeed_in_unbinding_wechat">解绑微信成功</string>
     <string name="succeed_in_changing_default_manager">默认上级修改成功</string>
     <string name="succeed_in_sending_feedback">反馈发送成功！</string>
-    <string name="succeed_in_sending_invite_reply">邀请回复发送成功！</string>
-    <string name="succeed_in_sending_apply_reply">申请回复发送成功！</string>
+    <string name="succeed_in_sending_invite_reply">邀请回复发送成功</string>
+    <string name="succeed_in_sending_apply_reply">申请回复发送成功</string>
     <string name="succeed_in_exporting">报告导出成功</string>
     <string name="succeed_in_saving_item">保存成功</string>
     <string name="succeed_in_saving_report">报告保存成功</string>
@@ -468,7 +488,7 @@
     <string name="succeed_in_modifying_tag">修改成功</string>
     <string name="succeed_in_deleting_category">删除成功</string>
     <string name="succeed_in_deleting_tag">删除成功</string>
-    <string name="succeed_in_sending_invite">发送成功</string>
+    <string name="succeed_in_sending_invite">邀请发送成功</string>
     <string name="succeed_in_sending_comment">发表成功</string>
     <string name="succeed_in_submitting_report">提交成功</string>
     <string name="succeed_in_alerting">已提醒对方审批报告</string>
@@ -524,6 +544,9 @@
     <string name="failed_to_sign_out">登出失败</string>
     <string name="failed_to_change_password">修改密码失败</string>
     <string name="failed_to_set_password">设置密码失败</string>
+    <string name="failed_to_unbind_email">解绑邮箱失败</string>
+    <string name="failed_to_unbind_phone">解绑手机失败</string>
+    <string name="failed_to_unbind_wechat">解绑微信失败</string>
     <string name="failed_to_alert">提醒发送失败</string>
     <string name="failed_to_get_message_list">获取消息列表失败</string>
     <string name="failed_to_delete">删除失败</string>
@@ -570,7 +593,7 @@
     <string name="vendor_flight">飞机票</string>
     <string name="vendor_train">火车票</string>
     <string name="vendor_phone">话费</string>
-    
+
     <string name="status_draft">待提交</string>
     <string name="status_submitted">审核中</string>
     <string name="status_approved">待结算</string>
@@ -580,14 +603,14 @@
     <string name="status_borrowing">借</string>
     <string name="status_approve_ahead_approved">(已审批)</string>
     <string name="status_cc">抄送</string>
-    
+
     <string name="xlistview_header_hint_normal">下拉更新</string>
     <string name="xlistview_header_hint_ready">释放更新</string>
     <string name="xlistview_header_hint_loading">正在加载……</string>
     <string name="xlistview_header_last_time">最近更新：</string>
     <string name="xlistview_footer_hint_normal">查看更多</string>
     <string name="xlistview_footer_hint_ready">松开载入更多</string>
-    
+
     <string name="surprise">如果你能看到这个窗口，说明你是一个极有探索欲望的同学，如数科技就是喜欢这样的人。你有没有兴趣加入我们呢？请发送简历到hr@cloudbaoxiao.com。</string>
     <string name="surprise_ok">好的我知道了</string>
 
