--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -209,6 +209,7 @@
     <string name="choose_cc">选择抄送人</string>
     <string name="admin">公司管理员</string>
     <string name="submit">提交</string>
+    <string name="revoke">撤回</string>
     <string name="approve">通过</string>
     <string name="reject">退回</string>
     <string name="reject_reason">退回理由：</string>
@@ -496,6 +497,7 @@
     <string name="succeed_in_sending_invite">邀请发送成功</string>
     <string name="succeed_in_sending_comment">发表成功</string>
     <string name="succeed_in_submitting_report">提交成功</string>
+    <string name="succeed_in_revoking_report">撤回成功</string>
     <string name="succeed_in_alerting">已提醒对方审批报告</string>
     <string name="succeed_in_deleting">删除成功</string>
     <string name="succeed_in_applying">申请发送成功，管理员批准后可正式加入</string>
@@ -540,6 +542,7 @@
     <string name="failed_to_send_apply_reply">申请回复发送失败</string>
     <string name="failed_to_send_comment">评论发表失败</string>
     <string name="failed_to_submit_report">提交报告失败</string>
+    <string name="failed_to_revoke_report">撤回报告失败</string>
     <string name="failed_to_send_email">邮件发送失败</string>
     <string name="failed_to_send_message">短信发送失败</string>
     <string name="failed_to_modify">修改失败</string>
